--- a/htdocs/e2fsprogs-release.html
+++ b/htdocs/e2fsprogs-release.html
@@ -30,6 +30,7 @@
 
 <H2>Release notes for the e2fsprogs package</H2>
 <UL>
+<LI><A HREF="#1.42.13">E2fsprogs 1.42.13 (May 17, 2015)</A>
 <LI><A HREF="#1.42.12">E2fsprogs 1.42.12 (August 29, 2014)</A>
 <LI><A HREF="#1.42.11">E2fsprogs 1.42.11 (July 9, 2014)</A>
 <LI><A HREF="#1.42.10">E2fsprogs 1.42.10 (May 18, 2014)</A>
@@ -109,6 +110,68 @@
 <LI><A HREF="#1.03">E2fsprogs 1.03 (March 27, 1996)</A>
 <LI><A HREF="#1.02">E2fsprogs 1.02 (January 16, 1996)</A>
 </UL>
+
+<H2><A NAME="1.42.13">E2fsprogs 1.42.12 (May 17, 2015)</A></H2>
+
+<P>Fixed a potential buffer overflow while closing a file system in
+libext2fs.  (CVE-2015-1572, Addresses Debian Bug: #778948)</P>
+
+<P>Fixed a bug which could cause e2fsck to corrupt Hurd file systems.
+(Addresses Debian Bug: #760275)</P>
+
+<P>Fixed a deadlock which occurs when using systemd and e2fsck.conf's
+logging feature.  (Addresses Debian Bug: #775234)</P>
+
+<P>Fixed a bug which could cause programs using libext2's inode table
+scanning functions from crashing on certain corrupted file systems.
+(Addresses Debian Bug: #773795)</P>
+
+<P>Fixed dumpe2fs so it won't crash if the user doesn't specify a block
+device (file system).  (Addresses Debian Bug: #764293)</P>
+
+<P>Fixed e2fsck so if it notices unexpected HTREE blocks in pass 2, it
+will report the correct directory inode containing the inconsistency.</P>
+
+<P>If e2fsck fails to grow the dir_info structure due realloc(3) not
+having enough memory, it will now fail with explanatory message
+instead of staggering on failing with a confusing internal error
+messages.</P>
+
+<P>The tune2fs program will zero out the superblock journal backup
+information when removing a journal from a file system.</P>
+
+<P>The mke2fs program now enables the large_file feature by default.</P>
+
+<P>Fixed a bug which could cause badblocks to crash if there are millions
+and millions of bad blocks.</P>
+
+<P>Fixed some use-after-free bug in resize2fs and e2fsck.</P>
+
+<P>Fixed a memory leak in tune2fs.</P>
+
+<P>Fixed some bigendian bugs that had crept into both indirect and extent
+handling inside libext2fs.</P>
+
+<P>Updated/fixed various man pages.</P>
+
+<P>Update Esperanto, German, and Spanish translations.  Added Danish
+translation.</P>
+
+<H3>Programmer's Notes</H3>
+
+<P>Fixed coverity, sparce gcc -Wall, and clang warnings/nits.</P>
+
+<P>Clean up some build system problems (build failures with various
+configure options, fix Posix portability issues, etc.)</P>
+
+<P>The functions ext2fs_inode_alloc_stats[2]() and
+ext2fs_block_alloc_stats[2]() now check the inode and block numbers
+passed to them, to avoid crashes caused by buggy callers.</P>
+
+<P>The libext2fs directory iterator will now check for an invalid
+directory entry length instead of possibly walking off the end of the
+directory buffer.</P>
+
 
 <H2><A NAME="1.42.12">E2fsprogs 1.42.12 (August 29, 2014)</A></H2>
 
