Update for 1.43.4 release

--- a/htdocs/e2fsprogs-release.html
+++ b/htdocs/e2fsprogs-release.html
@@ -30,6 +30,7 @@
 
 <H2>Release notes for the e2fsprogs package</H2>
 <UL>
+<LI><A HREF="#1.43.4">E2fsprogs 1.43.4 (January 31, 2017)</A>
 <LI><A HREF="#1.43.3">E2fsprogs 1.43.3 (September 4, 2016)</A>
 <LI><A HREF="#1.43.2">E2fsprogs 1.43.2 (September 1, 2016)</A>
 <LI><A HREF="#1.43.1">E2fsprogs 1.43.1 (June 8, 2016)</A>
@@ -114,6 +115,76 @@
 <LI><A HREF="#1.03">E2fsprogs 1.03 (March 27, 1996)</A>
 <LI><A HREF="#1.02">E2fsprogs 1.02 (January 16, 1996)</A>
 </UL>
+
+<H2><A NAME="1.43.4">E2fsprogs 1.43.4 (January 31, 2017)</A></H2>
+
+<P>Fix e2fsck to require that the system.data extended attribute is
+always present even for files smaller than 60 bytes, to be consistent
+with the kernel.</P>
+
+<P>Fix a bug which was causing mke2fs -d and fuse2fs to improperly handle
+Posix ACL's.</P>
+
+<P>Fix a bug which could cause mke2fs -d to fail if there is an
+zero-length file in source directory tree.</P>
+
+<P>Clarify the default for the "proceed?" question printed by mke2fs and
+tune2fs.  (Addresses Debian Bug: #852727)</P>
+
+<P>Debugfs will now display project quota information.</P>
+
+<P>Debugfs's do_set_xattr now uses C strings to parse extended attribute
+values, and will print the extended attributes using either C strings
+or hex bytes when using debugfs's do_get_xattr command.  It will now
+allow developers to see the contents of the system.data extended
+attribute.</P>
+
+<P>Fix a bug in mke2fs where I/O errors weren't getting properly reported
+to the user.</P>
+
+<P>Fix multiblock writes in the unaligned Direct I/O fallback code.
+(Which is rarely needed on Linux systems, but which is required on
+Freebsd systems.)</P>
+
+<P>Make sure the default mke2fs.conf file includes the uninit_bg feature
+flag.  (Which was accidentally dropped in v1.43).</P>
+
+<P>Fix a bug in resize2fs when operating on very large file systems which
+have a block size different from the VM page size.</P>
+
+<P>If the reported device size is absurdly large, mke2fs will now report
+an error instead looping forever or crashing.</P>
+
+<P>Fix various Coverity warnings and other memory leaks in fuse2fs and
+extended attribute manipulation functions.</P>
+
+<P>Replace a test file but which had a "non-commercial use-only"
+copyright permission file with a newer version from the Cyrus imapd
+package which now has a 4-clause BSD license, which was making some
+lawyers nervous, even though the test file in question was only used
+in lib/et's regression testing and was never included in any compiled
+binary.  (Addresses Debian Bug: #840733)</P>
+
+<P>Stop installing mkfs.ext4dev and fsck.ext4dev</P>
+
+<P>Update Chinese, Czech, Polish, Serbian, and Spanish translations and
+add the Finnish and Malay translation.  (Addresses-Debian-Bug: #774379)</P>
+
+<P>Update various man pages (Addresses-Debian-Bug: #852726)</P>
+
+<H3>Programming notes</H3>
+
+<P>Fix more FreeBSD-11 compatibility bugs, including some unmasked by
+FreeBSD 11-rc2.</P>
+
+<P>Fix the Mac build.</P>
+
+<P>Fix build failure on RHEL 5.x systems caused by an old version of
+libmagic.</P>
+
+<P>Fix a number of bugs reported by ASAN that can cause some (mostly
+harmless) memory dereferences beyond allocated memory.</P>
+
 
 <H2><A NAME="1.43.3">E2fsprogs 1.43.3 (September 4, 2016)</A></H2>
 
