--- a/htdocs/e2fsprogs-release.html
+++ b/htdocs/e2fsprogs-release.html
@@ -30,6 +30,7 @@
 
 <H2>Release notes for the e2fsprogs package</H2>
 <UL>
+<LI><A HREF="#1.44.1">E2fsprogs 1.44.1 (March 24, 2018)</A>
 <LI><A HREF="#1.44.0">E2fsprogs 1.44.0 (March 7, 2018)</A>
 <LI><A HREF="#1.43.9">E2fsprogs 1.43.9 (February 8, 2018)</A>
 <LI><A HREF="#1.43.8">E2fsprogs 1.43.8 (January 1, 2018)</A>
@@ -122,6 +123,50 @@
 <LI><A HREF="#1.03">E2fsprogs 1.03 (March 27, 1996)</A>
 <LI><A HREF="#1.02">E2fsprogs 1.02 (January 16, 1996)</A>
 </UL>
+
+<H2><A NAME="1.44.1">E2fsprogs 1.44.0 (March 24, 2018)</A>
+
+<H3>Fixes</H3>
+
+<P>E2fsprogs 1.44.0 introduced a regression introduced which caused e2fsck
+to fail to support HTree directories on big-endian systems.  Fix how we
+read block numbers for internal htree nodes.</P>
+
+<P>Removed a potential memory leak from fsck.</P>
+
+<P>E2image now correctly creates e2image files for bigalloc file systems.</P>
+
+<P>Dumpe2fs and debugfs now correctly support e2image files for file
+systems that have the meta_bg option enabled.</P>
+
+<P>E2fsck and debugfs now correctly handle delete inodes (including
+processing the orphaned inode list in the case of e2fsck) for bigalloc
+file systems.  (Addresses Google Bug: #73795618)</P>
+
+<P>Portability fixes for GNU Hurd.  (Addresses Debian Bug: #893590)</P>
+
+<P>Portability fixes for building in some cross-build environments.</P>
+
+<P>Portability fixes for MacOS 10.6.8.</P>
+
+<P>Add clarifications to chattr's man page.  (Addresses Debian Bug:
+#890390)</P>
+
+
+<H3>Performance, Internal Implementation, Development Support etc.</H3>
+
+<P>Debugfs now reads allocation bitmaps much more efficiently when opening
+a file system.</P>
+
+<P>Update Sweedish translation file.</P>
+
+<P>Add Vcs-* fields to debian packaging.  (Addresses Debian Bug: #887512)</P>
+
+<P>Fix some test failures on GNU Hurd caused by a different default block
+size.</P>
+
+<P>Add new regression tests.</P>
+  
 
 <H2><A NAME="1.44.0">E2fsprogs 1.44.0 (March 7, 2018)</A>
 
