--- a/htdocs/e2fsprogs-release.html
+++ b/htdocs/e2fsprogs-release.html
@@ -30,6 +30,7 @@
 
 <H2>Release notes for the e2fsprogs package</H2>
 <UL>
+<LI><A HREF="#1.44.2">E2fsprogs 1.44.2 (May 14, 2018)</A>
 <LI><A HREF="#1.44.1">E2fsprogs 1.44.1 (March 24, 2018)</A>
 <LI><A HREF="#1.44.0">E2fsprogs 1.44.0 (March 7, 2018)</A>
 <LI><A HREF="#1.43.9">E2fsprogs 1.43.9 (February 8, 2018)</A>
@@ -123,6 +124,54 @@
 <LI><A HREF="#1.03">E2fsprogs 1.03 (March 27, 1996)</A>
 <LI><A HREF="#1.02">E2fsprogs 1.02 (January 16, 1996)</A>
 </UL>
+
+<H2><A NAME="1.44.2">E2fsprogs 1.44.2 (May 14, 2018)</A>
+
+<H3>Fixes</H3>
+
+<P>E2fsck now prints a warning message if broken_system_clock is set in
+e2fsck.conf and this causes the check interval to be ignored so it is
+clear to the user.</P>
+
+<P>Fix e2image handling of e2i files on big endian systems</P>
+
+<P>Add sanity checks for inodes containing xattr values to prevent
+maliciously crafted file systems from causing crashes caused by infinite
+recursion from causing e2fsck and debugfs to crash.</P>
+
+<P>Fix e2fsck so that quota usage is adjusted when clearing orphaned
+inodes.</P>
+
+<P>Fix filefrag so that unknown flags returned by FIEMAP won't cause a
+buffer overrun.</P>
+
+<P>Fix mke2fs to print a more useful/correct error message if
+ext2fs_close_free() at the end of the file system creation process.</P>
+
+<P>Improve chattr's man page.</P>
+
+
+<H3>Performance, Internal Implementation, Development Support etc.</H3>
+
+<P>Demote e2fsprogs in debian packaging from Essential: yes to
+XB-Important: yes (Addresses Debian Bug #474540)</P>
+
+<P>Fix intl/Makefile so it uses @AR@ instead of a hard-coded 'ar' (which
+matters when cross compiling).</P>
+
+<P>Update Polish translation file.</P>
+
+<P>Fix the address of the FSF in various GPL/LGPL copyright licenses.</P>
+
+<P>Clean up the i_bitmaps test so it doesn't leave temporary files behind.</P>
+
+<P>Remove use of /dev/stdin in the regression tests since not all systems
+have /dev/stdin.</P>
+
+<P>Fix the f_bigalloc_badinode and f_bigalloc_orphan_list regression tests
+so they uses mke2fs and ebugfs from the build tree.  They may not exist
+in the users PATH, and if they not or if they are extremely
+old/obsolete, those tests would fail.</P>
 
 <H2><A NAME="1.44.1">E2fsprogs 1.44.1 (March 24, 2018)</A>
 
