--- a/htdocs/e2fsprogs-release.html
+++ b/htdocs/e2fsprogs-release.html
@@ -30,6 +30,7 @@
 
 <H2>Release notes for the e2fsprogs package</H2>
 <UL>
+<LI><A HREF="#1.44.3">E2fsprogs 1.44.3 (July 10, 2018)</A>
 <LI><A HREF="#1.44.2">E2fsprogs 1.44.2 (May 14, 2018)</A>
 <LI><A HREF="#1.44.1">E2fsprogs 1.44.1 (March 24, 2018)</A>
 <LI><A HREF="#1.44.0">E2fsprogs 1.44.0 (March 7, 2018)</A>
@@ -125,6 +126,105 @@
 <LI><A HREF="#1.02">E2fsprogs 1.02 (January 16, 1996)</A>
 </UL>
 
+<H2><A NAME="1.44.3">E2fsprogs 1.44.3 (July 10, 2018)</A>
+
+<H3>UI and Features</H3>
+
+<P>The debugfs inode_dump command can now print a hex dump of the i_block
+array and the extra space in the inode, as a convenience to someone
+investigating a corrupted inode.</P>
+
+<P>The debugfs block_dump and inode_dump command can now print low-level
+dump of extended attribute data structures in the block or inode.</P>
+
+<P>The dumpe2fs command can now print out information in the Multi-Mount
+Protection (MMP) block.  This is also available as e2mmpstatus command
+for compatibility with the Lustre utilities.</P>
+
+<P>The debugfs command can now operate on some file systems with
+corrupted superblocks so they can be fixed.  This includes file
+systems with a corrupted inodes count field and file systems where not
+all of the allocation bitmaps have valid locations or are not
+readable.</P>
+
+<H3>Fixes</H3>
+
+<P>The inode's project ID is now properly byte-swapped on big-endian
+systems.</P>
+
+<P>E2fsprogs now ignores s_desc_size for file systems that do not have
+the 64-bit feature set.  This makes it more consistent with the
+kernel, so it can now operate on file systems that the kernel is
+willing to mount.  </P>
+
+<P>E2fsck now considers device inodes with the extents flag as corrupt
+and offer to clear them.</P>
+
+<P>E2fsck more properly handles cases where s_inodes_count is corrupted.</P>
+
+<P>E2fsck no longer spews large number of errors when the superblock
+badly corrupted (restoring its behavior pre-1.43).</P>
+
+<P>E2fsck will now offer to set the dir_nlink feature if it is not set
+and file system requires the dir_nlink feature because there are too
+many subdirectories in a directory.</P>
+
+<P>E2fsck will no longer loop infinitely due to a maliciously crafted
+file system which has a fully uninitialized inode table in the first
+block group.</P>
+
+<P>E2fsck will no longer hang if the last block in the file system is a
+fixed-metadata block.  (Very rare, but could happen.)</P>
+
+<P>E2fsck no longer allows initialized blocks to exist past i_size.  This
+is something the Linux implementation of ext4 has never done (and should
+never do).</P>
+
+<P>While replaying the journal in e2fsck, certain errors would previously
+cause e2fsck to print a non-sensical error message (e.g., "Unknown code
+____ 251 while recovering journal").  This has been fixed.</P>
+
+<P>In cases where more than 75% of the block group will be used for group
+descriptor table, mke2fs would previously create an invalid file
+system with both the meta_bg and resize_inode features enabled.  It
+will now disable the resize_inode feature.</P>
+
+<P>The mke2fs program now properly creates a file system which is exactly
+1 << 32 blocks.  Previously the s_inodes_count field would overflow,
+and the file system would be created with a minimal number of inodes.</P>
+
+<P>Recent kernels will report errors on a file or block device which
+occurred before the file or block device was opened via fsync() or
+close().  This will cause e2fsck to incorrectly report a failure.  Work
+around this by calling fsync() immediately after the file or block
+device is opened in the unix_io layer, and throwing away the error.</P>
+
+<P>Filefrag will no longer ignore errors returned by fsync.</P>
+
+<P>Debugfs will no longer print spurious checksum errors when failing to
+open a file system for unrelated reasons.</P>
+
+<P>Updated/fixed various man pages.  (Addresses Launchpad Bug: #1743553)</P>
+
+
+
+<H3>Performance, Internal Implementation, Development Support, etc.</H3>
+
+<P>Synchronized changes from Android's AOSP e2fsprogs tree.</P>
+
+<P>Debugfs's mknod command now works correctly on some 32-bit systems where
+previously it had a portability problem caused by some object files
+being compiled with LFS, and some without.  This fixes some regression
+test failures on 32-bit MIPS (for example).</P>
+
+<P>Various clean ups, portability, and performance improvements to
+e2fsprogs's regression test framework.</P>
+
+<P>Fixed Coverity, sparse, gcc -Wall, and clang warnings/nits.</P>
+
+<P>Update Czech, Dutch, Spanish, French, Polish, Swedish, Ukrainian, and
+Vietnamese translations.</P>
+
 <H2><A NAME="1.44.2">E2fsprogs 1.44.2 (May 14, 2018)</A>
 
 <H3>Fixes</H3>
@@ -151,7 +251,7 @@ ext2fs_close_free() at the end of the file system creation process.</P>
 <P>Improve chattr's man page.</P>
 
 
-<H3>Performance, Internal Implementation, Development Support etc.</H3>
+<H3>Performance, Internal Implementation, Development Support, etc.</H3>
 
 <P>Demote e2fsprogs in debian packaging from Essential: yes to
 XB-Important: yes (Addresses Debian Bug #474540)</P>
@@ -202,7 +302,7 @@ file systems.  (Addresses Google Bug: #73795618)</P>
 #890390)</P>
 
 
-<H3>Performance, Internal Implementation, Development Support etc.</H3>
+<H3>Performance, Internal Implementation, Development Support, etc.</H3>
 
 <P>Debugfs now reads allocation bitmaps much more efficiently when opening
 a file system.</P>
