--- a/htdocs/e2fsprogs-release.html
+++ b/htdocs/e2fsprogs-release.html
@@ -30,6 +30,7 @@
 
 <H2>Release notes for the e2fsprogs package</H2>
 <UL>
+<LI><A HREF="#1.44.4">E2fsprogs 1.44.4 (August 18, 2018)</A>
 <LI><A HREF="#1.44.3">E2fsprogs 1.44.3 (July 10, 2018)</A>
 <LI><A HREF="#1.44.2">E2fsprogs 1.44.2 (May 14, 2018)</A>
 <LI><A HREF="#1.44.1">E2fsprogs 1.44.1 (March 24, 2018)</A>
@@ -125,6 +126,61 @@
 <LI><A HREF="#1.03">E2fsprogs 1.03 (March 27, 1996)</A>
 <LI><A HREF="#1.02">E2fsprogs 1.02 (January 16, 1996)</A>
 </UL>
+
+<H2><A NAME="1.44.4">E2fsprogs 1.44.4 (August 18, 2018)</A>
+
+<H3>UI and Features</H3>
+
+<P>Add basic support for the ext4 verity feature (aka fsverity).  It is a
+read-only compatibility feature which uses Merkle trees to add
+functionality much like dm-verity on a per-file basis.  For this release
+we simply allow e2fsck to accept file systems with the verity feature
+enable (no special handling is needed) and mke2fs to create file systems
+with the verity feature.</P>
+
+
+<H3>Fixes</H3>
+
+<P>E2fsck will now properly repair a file system that has both the
+resize_inode and meta_bg features enabled simultaneously (which is never
+supposed to happen, but it could happen in versions of mke2fs before
+1.44.3 when it was given parameters where more than 75% of the block
+group was used for group descriptor tables).</P>
+
+<P>Avoid a floating point exception crash when libblkid tries probing a
+maliciously corrupted HFS+ superblock.</P>
+
+<P>Debugfs's ncheck command now properly will handle inodes that have
+multiple hard links.</P>
+
+<P>On platforms that don't supply strdup, the replacement function for
+strdup() had a bug which would cause it to crash if it was used.
+(Fortunately this only happens if the [scratch_files] feature in e2fsck
+is used.)</P>
+
+<P>Fixed support for devices which have non-512 byte block sizes on Apple
+Darwin.</P>
+
+<P>E2fsprogs 1.44.3 would fail to compile on very old versions of gcc.
+This is now fixed.</P>
+
+<P>Update and clarify man pages.  (Addresses Debian Bug: #757831)</P>
+
+
+<H3>Performance, Internal Implementation, Development Support etc.</H3>
+
+<P>Synchronized changes from Android's AOSP e2fsprogs tree.</P>
+
+<P>Instead of building the subset e2fsprogs-libs tar file, add a new
+configure option, --enable-subset.  This along with other changes (such
+as dropping obsolete files that aren't shipped as part of
+e2fsprogs-X.YY.tar.gz) allows us to be able to build the tarball using
+the "git archive" command.</P>
+
+<P>Fixed various debian packaging issues (Addresses Debian Bug: #905195)</P>
+
+<P>Update Danish, Spanish, and Swedish translations.</P>
+  
 
 <H2><A NAME="1.44.3">E2fsprogs 1.44.3 (July 10, 2018)</A>
 
