--- a/htdocs/e2fsprogs-release.html
+++ b/htdocs/e2fsprogs-release.html
@@ -30,6 +30,7 @@
 
 <H2>Release notes for the e2fsprogs package</H2>
 <UL>
+<LI><A HREF="#1.44.5">E2fsprogs 1.44.5 (December 15, 2018)</A>
 <LI><A HREF="#1.44.4">E2fsprogs 1.44.4 (August 18, 2018)</A>
 <LI><A HREF="#1.44.3">E2fsprogs 1.44.3 (July 10, 2018)</A>
 <LI><A HREF="#1.44.2">E2fsprogs 1.44.2 (May 14, 2018)</A>
@@ -126,6 +127,78 @@
 <LI><A HREF="#1.03">E2fsprogs 1.03 (March 27, 1996)</A>
 <LI><A HREF="#1.02">E2fsprogs 1.02 (January 16, 1996)</A>
 </UL>
+
+<H2><A NAME="1.44.5">E2fsprogs 1.44.5 (December 15, 2018)</A>
+
+<H3>UI and Features</H3>
+
+<P>When e2fsck notices it could optimize an extent tree, it will now ask
+"Optimize?" instead of "Fix?", which was confusing some users since it
+implied that something was broken.</P>
+
+
+<H3>Fixes</H3>
+
+<P>Use 64-bit counters to track the number of files that are defragmented
+using in e4defrag, to avoid overflows when more than 2**32 files are
+defragmented.  (Addresses Debian Bug: #888899)</P>
+
+<P>Correctly translate Posix ACL's.  This was a regression introduced in
+v1.44.4.   (Addresses Launchpad Bug: #1807288)</P>
+
+<P>Use the online free block counts so e2freefrag's percentages are
+correct.</P>
+
+<P>Fix a false warning that tune2fs will take long time to change a UUID if
+the metadata_csum feature is not enabled.</P>
+
+<P>E2fsck will only offer to set the inline_data feature flag when the
+inline flag is set on the inode, *and* the system.data xattr is present.</P>
+
+<P>E4defrag will handle the case where it is running as root and it can't
+find the file system to open more gracefully.  (Addresses Debian Bug:
+#907634)</P>
+
+<P>Fix a bug where resize2fs was failing to update the extent tree
+checksums in an corner case.  (Addresses Launchpad Bug: #1798562)</P>
+
+<P>Fix fuse2fs's command line parsing when options are specified after the
+target device/image.</P>
+
+<P>Fix a bug which could cause e2fsprogs tools to segfault on a corrupted
+file system where the journal's s_nr_users is impossibly large.</P>
+
+<P>E2image now includes the mmp block (if needed) when creating a
+metadata-only image.</P>
+
+<P>Fix various Verity handling bugs which made it completely unusable in
+e2fsprogs 1.44.4.</P>
+
+<P>Fox a bug in tune2fs where it would dereference of freed memory after
+replaying the journal.</P>
+
+
+<H3>Performance, Internal Implementation, Development Support etc.</H3>
+
+<P>Synchronized changes from Android's AOSP e2fsprogs tree.</P>
+
+<P>Fix groff formatting nits in various man pages.  (Addresses Debian Bug:
+#916188)</P>
+
+<P>Fixed various debian packaging issues (Addresses Debian Bug: #915942)</P>
+
+<P>Adjusted the copyright license for lib/blkid/version.c to be LGPL (and
+consistent with the rest of files in that directory).</P>
+
+<P>Fix various clang warnings.</P>
+
+<P>Fix "make install" when configure was run with --enable-subset.</P>
+
+<P>Make sure the regression tests clean up their tmpfile if the test script
+exits.</P>
+
+<P>Fix build failures on non-glibc systems.</P>
+
 
 <H2><A NAME="1.44.4">E2fsprogs 1.44.4 (August 18, 2018)</A>
 
