--- a/htdocs/e2fsprogs-release.html
+++ b/htdocs/e2fsprogs-release.html
@@ -30,6 +30,7 @@
 
 <H2>Release notes for the e2fsprogs package</H2>
 <UL>
+<LI><A HREF="#1.45.3">E2fsprogs 1.45.3 (July 14, 2019)</A>
 <LI><A HREF="#1.45.2">E2fsprogs 1.45.2 (May 27, 2019)</A>
 <LI><A HREF="#1.45.1">E2fsprogs 1.45.1 (May 12, 2019)</A>
 <LI><A HREF="#1.45.0">E2fsprogs 1.45.0 (March 6, 2019)</A>
@@ -130,6 +131,66 @@
 <LI><A HREF="#1.03">E2fsprogs 1.03 (March 27, 1996)</A>
 <LI><A HREF="#1.02">E2fsprogs 1.02 (January 16, 1996)</A>
 </UL>
+
+<H2><A NAME="1.45.3">E2fsprogs 1.45.3 (July 14, 2019)</A></H2>
+
+<H3>UI and Features</H3>
+
+<P>Whether or not automatic online scrubs will be run is now controlled by
+a setting in /etc/e2scrub.conf.  To enable automatic online scrubs,
+uncomment out the line containing "periodic_e2scrub=1".</P>
+
+<P>The fuse2fs program is now installed in /usr/bin instead of /usr/sbin,
+since it does not require root privileges.</P>
+
+<P>Fuse2fs now works with if fusermount from FUSE V3 is installed.
+However, in order to provide this compatibility, if you are using a
+fusermount from FUSE v2, and you want to mount on top of a non-empty
+directory, you will need to specify -o nonempty explicitly.  FUSE V3
+always allows mounting on top of non-empty directories, and will fail if
+the user or fuse2fs passes the nonempty option.</P>
+
+
+<H3>Fixes</H3>
+
+<P>Fixed a bug which caused e2fsck to improperly handle file systems that
+enabled both the large_dir and inline directories at the same time.</P>
+
+<P>E2scrub_all now correctly handles an encrypted (LUKS) ext[234] file
+system stacked on top of an LVM volume.  (Addresses Debian Bug: #931387)</P>
+
+<P>Fixed a bug in "E2scrub_all -r" where it was incorrectly specifying
+which volume needed to have its e2scrub snapshot cleaned up.  (Addresses
+Debian Bug: #931679)</P>
+
+<P>Fixed the Czech, Dutch, German, and Vietnamese translations which
+improperly used positional markers which broke a few translated e2fsck
+problem descriptions.  (Addresses Debian Bug: #892173)</P>
+
+
+<H3>Performance, Internal Implementation, Development Support etc.</H3>
+
+<P>Fixed various debian packaging issues.  (Addresses Debian Bug: #931266,
+#923372)</P>
+
+<P>Fixed error checking for calls to posix_{memalign,fadvise}.</P>
+
+<P>Add regression test for checking a file system using fs-verity.</P>
+
+<P>Various regression test cleanups.</P>
+
+<P>Fixed various compiler warnings.</P>
+
+<P>Added xgettext markers to fix incorrectly marked strings in the
+e2fsprogs translations template file as being c-style printf strings
+when in fact they aren't.</P>
+
+<P>Added utility script which generates the release tarfile using git
+archive.</P>
+
+<P>Update the Czech, Dutch, and Portuguese translations from the
+Translation Project.</P>
+
 
 <H2><A NAME="1.45.2">E2fsprogs 1.45.2 (May 27, 2019)</A></H2>
 
