--- a/htdocs/e2fsprogs-release.html
+++ b/htdocs/e2fsprogs-release.html
@@ -34,6 +34,7 @@
 <LI><A HREF="#1.45.2">E2fsprogs 1.45.2 (May 27, 2019)</A>
 <LI><A HREF="#1.45.1">E2fsprogs 1.45.1 (May 12, 2019)</A>
 <LI><A HREF="#1.45.0">E2fsprogs 1.45.0 (March 6, 2019)</A>
+<LI><A HREF="#1.44.6">E2fsprogs 1.44.6 (March 5, 2019)</A>
 <LI><A HREF="#1.44.5">E2fsprogs 1.44.5 (December 15, 2018)</A>
 <LI><A HREF="#1.44.4">E2fsprogs 1.44.4 (August 18, 2018)</A>
 <LI><A HREF="#1.44.3">E2fsprogs 1.44.3 (July 10, 2018)</A>
@@ -328,6 +329,50 @@ the superblock location when creating a raw or qcow2 image.</P>
 
 <P>Add support for building e2fsprogs using Link Time Optimization (LTO),
 UBSAN, Address Sanitizer, or Thread Sanitizer.</P>
+
+<H2><A NAME="1.44.6">E2fsprogs 1.44.6 (March 5, 2019)</A></H2>
+
+<H3>Fixes</H3>
+
+<P>If files are created while e4defrag is running, it's quite possible for
+succeed_cnt to be larger than total_count, in which case the number of
+failures (calculated via total_count - succeed_cnt) will overflow and
+become a very large unsigned number.  (Addresses Debian Bug: #888899)</P>
+
+<P>Fix e2fsck so it can correctly handle directories > 2 GiB when the
+largedir feature is enabled.</P>
+
+<P>Fix mke2fs's hugefile creation so that we correctly reserve enough
+metadata blocks for a given file system size.  Otherwise for certain
+unfortunately sized disks/partitions, the hugefile creation would fail.
+(Addresses Google Bug: 123239032)</P>
+
+<P>Fix the libext2fs library to be more robust against invalid block group
+descriptors to prevent e2fsprogs from crashing (or possibly being
+p0wned) by maliciously modified file systems.  (Addresses Google Bugs:
+119171089, 119929050)</P>
+
+<P>Fix mke2fs and debugfs so they can correctly copy in files > 2 GiB.</P>
+
+<P>Fix debugfs so its stat command can correct supportly display directory
+sizes > 2 GiB.</P>
+
+<P>Fix memory leaks in debugfs, mke2fs, and e2freefrag.</P>
+
+<H3>Performance, Internal Implementation, Development Support etc.</H3>
+
+<P>Synchronized changes from Android's AOSP e2fsprogs tree.</P>
+
+<P>Avoid unnecessarily linking badblocks with the libblkid shared library.
+(Addresses Debian Bug: #919958)</P>
+
+<P>Stop depending on the debugfs binary for test data, since depending on
+the compiler, there might be sufficient aligned zero bytes that the
+resulting file(s) created by test cases could have unexpected sparse
+blocks, leading to test failures.   (Addresses Google Bug: #122085761)</P>
+
+<P>Fixed various debian packaging issues.</P>
+
 
 <H2><A NAME="1.44.5">E2fsprogs 1.44.5 (December 15, 2018)</A></H2>
 
